--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body {
+  background-color: #222;
+  cursor: default;
+  font-family: "Nunito", sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -8,9 +14,7 @@
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  padding: 10px;
   color: white;
 }
 
@@ -22,7 +26,24 @@
   font-size: large;
 }
 
+.lizImg {
+  width: 470px;
+  border-radius: 2px;
+  opacity: 0.05;
+}
+
+@media (max-width: 500px) {
+  .lizImg {
+    width: 80%;
+    border-radius: 0.5%;
+  }
+}
+
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
